2005-03-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-linux-tdep.c (arm_linux_thumb_be_breakpoint)
	(arm_linux_thumb_le_breakpoint): New.  Update comments.
	(arm_linux_init_abi): Set Thumb breakpoints also.

2005-03-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (arm-tdep.o): Update dependencies.
	* arm-tdep.c: Include "objfiles.h" and "dwarf2-frame.h".
	(arm_gdbarch_init): Register dwarf2_frame_sniffer.

2005-03-28  Joel Brobecker  <brobecker@adacore.com>

	* irix5-nat.c (supply_fpregset): Fix bug that caused the FSR
	register value to be incorrectly written in the regcache.
	(fill_fpregset): Fix bug that caused the FSR register value
	to be incorrectly read from the regcache.

2005-03-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* remote-rdi.c (arm_rdi_insert_breakpoint): Don't call
	arm_pc_is_thumb_dummy.

2005-03-28  Mark Kettenis  <kettenis@gnu.org>

	* sparc64nbsd-tdep.c (sparc64nbsd_sigcontext_saved_regs): Handle
	StackGhost.

	* sparc-tdep.c (sparc_supply_rwindow, sparc_collect_rwindow):
	Handle StackGhost in 64-bit code.
	* sparc64-tdep.c (sparc64_frame_prev_register): Handle StackGhost.

2005-03-27  Christopher Faylor  <cgf@timesys.com>

	* win32-nat.c (handle_exception): Treat win32 routines which check for
	valid addresses as "special" and don't stop when a SEGV is detected.
	(get_child_debug_event): Properly flag exception as unhandled.

2005-03-26  Daniel Jacobowitz  <dan@codesourcery.com>

	* cp-support.c (cp_class_name_from_physname): Rewrite.
	(unqualified_name_from_comp): New function, broken out from
	method_name_from_physname.  Correct handling for typed names
	and templates.
	(method_name_from_physname): Use unqualified_name_from_comp.
	(cp_func_name, remove_params): Move earlier in the file.  Add
	better comments.  Use the component tree to parse the name.
	(_initialize_cp_support): Remove stray whitespace.

2005-03-26  Mark Kettenis  <kettenis@gnu.org>
