@@ -1,5 +1,10 @@
 2005-03-29  Daniel Jacobowitz  <dan@codesourcery.com>
 
+	* arm-linux-nat.c (store_register, store_regs): Handle
+	ARM_PS_REGNUM.
+
+2005-03-29  Daniel Jacobowitz  <dan@codesourcery.com>
+
 	* arm-linux-tdep.c (arm_linux_thumb_be_breakpoint)
 	(arm_linux_thumb_le_breakpoint): New.  Update comments.
 	(arm_linux_init_abi): Set Thumb breakpoints also.
